fix: preserve Tab focus contrast

--- a/packages/react/src/tab/Tab.css
+++ b/packages/react/src/tab/Tab.css
@@ -177,8 +177,12 @@
   }
 
   .ds-tab__button:focus-visible {
-    outline-color: HighlightText;
+    outline-color: CanvasText;
     box-shadow: none;
+  }
+
+  .ds-tab__button[aria-selected='true']:focus-visible {
+    outline-color: HighlightText;
   }
 
   .ds-tab__button:disabled {
